--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,25 @@
 }
 
 
+@media screen and (max-width: 900px) {
+
+  .countryList{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 900px) {
+
+  .countryList{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+
+  .countryList{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
